src/parser/snapshots/rex__parser__tests__snapshot_array-9.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\begin{array}{r@{}l} 1 & 2 \\\\ 3 & 4\\end{array}\")"
---
Ok(
    [
        Array(
            Array {
                col_format: ArrayColumnsFormatting {
                    alignment: [
                        Right,
                        Left,
                    ],
                    separators: [
                        [],
                        [
                            AtExpression(
                                [],
                            ),
                        ],
                        [],
                    ],
                },
                rows: [
                    [
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '1',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '2',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                    ],
                    [
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '3',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                        [
                            Symbol(
                                Symbol {
                                    codepoint: '4',
                                    atom_type: Alpha,
                                },
                            ),
                        ],
                    ],
                ],
                left_delimiter: None,
                right_delimiter: None,
                extra_row_sep: None,
            },
        ),
    ],
)
