src/parser/snapshots/rex__parser__tests__snapshot_delimited-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(\\alpha\\right)\")"
---
Ok(
    [
        Delimited(
            Delimited {
                delimiters: [
                    Some(
                        Symbol {
                            codepoint: '(',
                            atom_type: Open,
                        },
                    ),
                    Some(
                        Symbol {
                            codepoint: ')',
                            atom_type: Close,
                        },
                    ),
                ],
                inners: [
                    [
                        Symbol(
                            Symbol {
                                codepoint: '𝛼',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ],
            },
        ),
    ],
)
