src/parser/snapshots/rex__parser__tests__snapshot_delimited-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(\\alpha+1\\right)\")"
---
Ok(
    [
        Delimited(
            Delimited {
                delimiters: [
                    Some(
                        Symbol {
                            codepoint: '(',
                            atom_type: Open,
                        },
                    ),
                    Some(
                        Symbol {
                            codepoint: ')',
                            atom_type: Close,
                        },
                    ),
                ],
                inners: [
                    [
                        Symbol(
                            Symbol {
                                codepoint: '𝛼',
                                atom_type: Alpha,
                            },
                        ),
                        Symbol(
                            Symbol {
                                codepoint: '+',
                                atom_type: Binary,
                            },
                        ),
                        Symbol(
                            Symbol {
                                codepoint: '1',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ],
            },
        ),
    ],
)
